# gta-clothes-pack

./: .gitignore  .gitmodules  LICENSE  README.md  build_all.bat  entry_exe.py  gta-clothes-pack.spec  pyi_rth_fivefury_hashing.py  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: release.yml
gta_clothes_pack/: __init__.py  classify.py  cli.py  config.py  crashlog.py  durty_names.py  fivefury_hashing_shim.py  freemode_identity.py  matcher.py  ped_markers.py  pipeline.py  rename_epic.py  runlog.py  ydd_parse.py  ymt_export.py  ymt_hints.py  ymt_meta.py  ytd_index.py
scripts/: build_all.ps1  build_exe.ps1  build_meta_tool.ps1  generate_app_icon.py  publish_github.ps1
tools/: README.txt
